Early page layout

--- a/ribbon_coco_drak.html
+++ b/ribbon_coco_drak.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Card Binder</title>
+    <title>Ribbon Coco Drak</title>
   </head>
   <body>
-    <link rel="stylesheet" href="/ribbon_coco_drak.html">Ribbon Coco Drak</link>
+    Here will be all sorts of great gameplay info!
   </body>
 </html>
