--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Card Binder</title>
   </head>
   <body>
-    <link rel="stylesheet" href="ribbon_coco_drak.html">Ribbon Coco Drak</link>
+    <a href="ribbon_coco_drak.html">Ribbon Coco Drak</a>
   </body>
 </html>
