--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Card Binder</title>
   </head>
   <body>
-    <a href="ribbon_coco_drak.html">Ribbon Coco Drak</a>
+    <a href="cards/ribbon_coco_drak">Ribbon Coco Drak</a>
   </body>
 </html>
