--- a/ribbon_coco_drak.html
+++ b/ribbon_coco_drak.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./src/build/tailwind.css">
   </head>
 
-  <body class="bg-gray-900">
+  <body>
       <div id="app"></div>
 
       <script src="app.js"></script>
