--- a/ribbon_coco_drak.html
+++ b/ribbon_coco_drak.html
@@ -2,11 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="./src/build/tailwind.css">
-    <meta charset="utf-8">
     <title>Ribbon Coco Drak</title>
   </head>
 
-  <body class="bg-grap-300">
+  <body class="bg-gray-300">
       <div id="app"></div>
 
       <script src="app.js"></script>
