--- a/ribbon_coco_drak.html
+++ b/ribbon_coco_drak.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="./src/build/tailwind.css">
+    <link rel="stylesheet" href="src/build/tailwind.css">
     <title>Ribbon Coco Drak</title>
   </head>
 
