--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="./src/build/tailwind.css">
+    <link rel="stylesheet" href="src/build/tailwind.css">
     <meta charset="utf-8">
     <title>Kipukas Card Binder</title>
   </head>
