--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Kipukas Card Binder</title>
   </head>
   <body class="bg-gray-300">
-    <a class="bg-gray-600 py-3 px-5 rounded shadow-xl mx-16" href="ribbon_coco_drak.html">Ribbon Coco Drak</a>
+    <h1 class="text-5xl font-semibold font-serif text-center text-green-400 my-5">Complete Kipukas Card Collection</h1>
+    <a class="bg-gray-600 py-3 px-5 rounded shadow-xl mx-16 text-white" href="ribbon_coco_drak.html">Ribbon Coco Drak</a>
   </body>
 </html>
