--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body class="bg-gray-300">
     <h1 class="text-5xl font-semibold font-serif text-center text-green-400 my-5">Complete Kipukas Card Collection</h1>
-    <a class="bg-gray-600 py-3 px-5 rounded shadow-xl mx-16 text-white" href="ribbon_coco_drak.html">Ribbon Coco Drak</a>
+    <a class="bg-gray-600 hover:bg-gray-500 active:shadow-none active:bg-gray-700 py-3 px-5 rounded shadow mx-16 text-white" href="ribbon_coco_drak.html">Ribbon Coco Drak</a>
   </body>
 </html>
