--- a/404.html
+++ b/404.html
@@ -1,25 +1,15 @@
 ---
 permalink: /404.html
 layout: default
+title: Have not made it yet!
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
+<div>
+  <h1 class="text-6xl text-center font-black">404</h1>
 
-<div class="container">
-  <h1>404</h1>
+  <p class="font-extrabold text-xl text-center">Page not found :(⊃</p>
+  <p class="text-center p-5">
+    But we take card requests all the time! You can even draw it yourself and get paid!
+  </p>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
 </div>
