Improve site syle with color pallette

--- a/_posts/2020-09-18-ribbon_coco_drak.html
+++ b/_posts/2020-09-18-ribbon_coco_drak.html
@@ -10,29 +10,29 @@ categories: spirit synthetic energized invertebrate  horror angelic
     <img class="object-cover object-center absolute inset-0 w-full h-full" src="{{ "/assets/images/sunflower_center.png" | relative_url }}" alt="Glorious dragon spirit wraped in ribbons"></img>
   </div>
 
-  <div class="flex-col py-16 lg:w-1/2 lg:pl-10 lg:bg-gray-100">
-    <h1 class="text-yellow-600 font-semibold text-center font-serif leading-none text-5xl">Ribbon Coco Drak</h1>
-    <img class="p-5 object-cover w-4/5 mx-auto lg:hidden" src="{{ "/assets/images/sunflower_center.png" | relative_url }}" alt="Glorious dragon spirit wraped in ribbons"></img>
+  <div class="flex-col py-8 md:py-16 lg:w-1/2 lg:pl-10 lg:bg-gray-200">
+    <h1 class="text-teal-400 font-semibold text-center leading-tight text-5xl">Ribbon Coco Drak</h1>
+    <img class="p-5 object-cover bg-gray-300 w-4/5 mx-auto lg:hidden" src="{{ "/assets/images/sunflower_center.png" | relative_url }}" alt="Glorious dragon spirit wraped in ribbons"></img>
     <ul class="p-5 text-xl w-4/5 lg:w-auto mx-auto leading-10 text-left md:text-2xl">
-        <li class="leading-snug py-2"><span class="text-orange-400">Scarcity: </span><span class="text-gray-700">Unparalleled</span></li>
+        <li class="leading-snug py-2"><span class="text-blue-600">Scarcity: </span><span class="text-gray-700">Unparalleled</span></li>
         <li class="leading-snug py-2">
-          <span class="text-orange-900">History: </span>
+          <span class="text-blue-600">History: </span>
           <p class="text-gray-700">
             Coco spirits take the form of man in selfish death, beast in wrongful death, or a most powerful dragon in a sacrificing death. This spirit has clocked itself with ribbons for an attachment to the physical world.
           </p>
         </li>
         <li class="leading-snug py-2">
-          <span class="text-pink-400">Play Style: </span>
+          <span class="text-blue-600">Play Style: </span>
           <p class="text-gray-700">Requires taming.</p>
         </li>
-        <li class="leading-snug py-2"><span class="text-red-600">Weak Points: </span>
+        <li class="leading-snug py-2"><span class="text-blue-600">Weak Points: </span>
         <ul class="px-5">
           <li><span class="text-gray-800">Sub-critical - </span><span class="text-gray-700">Ribbons</span></li>
-          <li><span class="text-red-800">Critical - </span><span class="text-gray-700">Energy essence</span></li>
+          <li><span class="text-pink-900">Critical - </span><span class="text-gray-700">Energy essence</span></li>
         </ul>
     </ul>
     <div class="flex">
-      <a class="text-center w-48 p-4 mx-auto bg-gray-600 active:bg-gray-700 inline-block active:shadow-none hover:bg-gray-500 shadow-lg text-white rounded" href="/">Back to Binder</a>
+      <a class="{{ site.btn-center }}" href="/">Back to Binder</a>
     </div>
   </div>
 </div>
