--- a/_posts/2020-09-18-ribbon_coco_drak.html
+++ b/_posts/2020-09-18-ribbon_coco_drak.html
@@ -27,8 +27,8 @@ categories: spirit synthetic energized invertebrate  horror angelic
         </li>
         <li class="leading-snug py-2"><span class="text-blue-600">Weak Points: </span>
         <ul class="px-5">
-          <li><span class="text-gray-800">Sub-critical - </span><span class="text-gray-700">Ribbons</span></li>
-          <li><span class="text-pink-900">Critical - </span><span class="text-gray-700">Energy essence</span></li>
+          <li class="p-2"><span class="text-gray-800">Sub-critical: </span><br><span class="text-gray-700">Ribbons</span></li>
+          <li class="p-2"><span class="text-pink-900">Critical: </span><br><span class="text-gray-700">Energy essence</span></li>
         </ul>
     </ul>
     <div class="flex">
