--- a/_posts/2020-09-18-ribbon_coco_drak.html
+++ b/_posts/2020-09-18-ribbon_coco_drak.html
@@ -1,38 +1,19 @@
 ---
-layout: default
+layout: card
 permalink: /ribbon_coco_drak/
 title: "Ribbon Coco Drak"
 tags: dragon ribbon
 categories: spirit synthetic energized invertebrate  horror angelic
+img_name: sunflower_center.png
+img_alt: "Glorious dragon spirit wraped in ribbons"
+scarcity: Unparalleled
+history: "Coco spirits take the form of man in selfish death,
+beast in wrongful death, or a most powerful dragon in a sacrificing death.
+This spirit has clocked itself with ribbons for an attachment to the physical world."
+play_style: "Requires taming."
+sub_critical:
+  - "Ribbon Lesser"
+  - "Ribbon Greater"
+critical:
+  - "Energy Essence"
 ---
-<div class="flex">
-  <div class="hidden lg:block lg:w-1/2 lg:relative">
-    <img class="object-cover object-center absolute inset-0 w-full h-full" src="{{ "/assets/images/sunflower_center.png" | relative_url }}" alt="Glorious dragon spirit wraped in ribbons"></img>
-  </div>
-
-  <div class="flex-col py-8 md:py-16 lg:w-1/2 lg:pl-10 lg:bg-gray-200">
-    <h1 class="text-teal-400 font-semibold text-center leading-tight text-5xl">Ribbon Coco Drak</h1>
-    <img class="p-5 object-cover bg-gray-300 w-4/5 mx-auto lg:hidden" src="{{ "/assets/images/sunflower_center.png" | relative_url }}" alt="Glorious dragon spirit wraped in ribbons"></img>
-    <ul class="p-5 text-xl w-4/5 lg:w-auto mx-auto leading-10 text-left md:text-2xl">
-        <li class="leading-snug py-2"><span class="text-blue-600">Scarcity: </span><span class="text-gray-700">Unparalleled</span></li>
-        <li class="leading-snug py-2">
-          <span class="text-blue-600">History: </span>
-          <p class="text-gray-700">
-            Coco spirits take the form of man in selfish death, beast in wrongful death, or a most powerful dragon in a sacrificing death. This spirit has clocked itself with ribbons for an attachment to the physical world.
-          </p>
-        </li>
-        <li class="leading-snug py-2">
-          <span class="text-blue-600">Play Style: </span>
-          <p class="text-gray-700">Requires taming.</p>
-        </li>
-        <li class="leading-snug py-2"><span class="text-blue-600">Weak Points: </span>
-        <ul class="px-5">
-          <li class="p-2"><span class="text-gray-800">Sub-critical: </span><br><span class="text-gray-700">Ribbons</span></li>
-          <li class="p-2"><span class="text-pink-900">Critical: </span><br><span class="text-gray-700">Energy essence</span></li>
-        </ul>
-    </ul>
-    <div class="flex">
-      <a class="{{ site.btn-center }}" href="/">Back to Binder</a>
-    </div>
-  </div>
-</div>
