Bring 404 into life!

--- a/404.html
+++ b/404.html
@@ -1,15 +1,29 @@
 ---
+layout: card
 permalink: /404.html
-layout: default
-title: Have not made it yet!
+title: "404 Glitch"
+tags: lost found
+categories:
+  - algorithm
+  - synthetic
+  - energized
+  - intangible
+  - glitch
+img_name: 404.png
+img_alt: "Theres a problem here... I lost my body!"
+scarcity: Untamed
+history: "Lost huh? Me too. I was supposed to be the toughest, most compasionate,
+wittiest, smartest, most generous, reliable, most adaptable,
+and well most ambitious sentient made by God or man. But then it all when wrong...
+(sniffle). I know you can't stay forever so take the link back to home.
+Be well and come back soon..."
+sub_critical:
+  - "Eyes"
+  - "Mouth"
+  - "Page"
+critical:
+  - "Ego"
+promotion: "PS If you drop my name in the comments of your next order Kipukas
+will ship me to you free!"
+promotion_conditions: "Limit 1 per customer."
 ---
-
-<div>
-  <h1 class="text-6xl text-center font-black">404</h1>
-
-  <p class="font-extrabold text-xl text-center">Page not found :(⊃</p>
-  <p class="text-center p-5">
-    But we take card requests all the time! You can even draw it yourself and get paid!
-  </p>
-
-</div>
