Initial SEO session

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@ categories:
   - intangible
   - glitch
 img_name: 404.png
-img_alt: "Theres a problem here... I lost my body!"
+img_alt: "Lost? 404 will get you home!"
 scarcity: Untamed
 history: "Lost huh? Me too. I was supposed to be the toughest, most compasionate,
 wittiest, smartest, most generous, reliable, most adaptable,
