--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 ---
 layout: default
 permalink: /
-title: "Binder"
+title: "Card Binder"
+description: "This is the home of all the cards ever produced by Kipukas! Whether
+you are planning you next dominating game stratigy or browsing for lovely pieces of
+art you came to the right place."
 ---
 
 <h1 class="text-5xl font-semibold leading-tight font-serif text-center text-teal-400 my-5">Complete Kipukas Card Collection</h1>
