--- a/_posts/2020-09-18-ribbon_coco_drak.html
+++ b/_posts/2020-09-18-ribbon_coco_drak.html
@@ -7,7 +7,7 @@ categories: spirit synthetic energized invertebrate  horror angelic
 img_name: sunflower_center.png
 img_alt: "Glorious dragon spirit wraped in ribbons"
 scarcity: Unparalleled
-history: "Coco spirits take the form of man in selfish death,
+description: "Coco spirits take the form of man in selfish death,
 beast in wrongful death, or a most powerful dragon in a sacrificing death.
 This spirit has clocked itself with ribbons for an attachment to the physical world."
 play_style: "Requires taming."
