--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@ you are planning you next dominating game stratigy or browsing for lovely pieces
 art you came to the right place."
 ---
 
-<h1 class="text-5xl font-semibold leading-tight font-serif text-center text-teal-400 my-5">Complete Kipukas Card Collection</h1>
-<div class="flex pb-5">
-  <input type="text" id="search-input" placeholder="Search the binder" class="mx-auto border-2 px-1 py-2 rounded-md w-3/4 md:w-2/3 lg:w-1/2 xl:w-1/3">
+<h1 class="text-4xl font-semibold mt-5 leading-tight text-center text-teal-400">Complete Kipukas Card Collection</h1>
+<div class="flex py-5">
+  <svg class="h-6 w-6 ml-auto my-auto" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M21 21L15 15M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10Z" stroke="#4A5568" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  </svg>
+  <input type="text" id="search-input" placeholder="Search the binder" class="mr-auto border-2 px-1 py-2 rounded-md w-3/4 md:w-2/3 lg:w-1/2 xl:w-1/3">
 </div>
 <div id="search-container" class="flex">
-
   <ul id="results-container" class="mx-auto"></ul>
 </div>
-
 <script type="text/javascript" src="search-script.js"></script>
-
 <script>
   SimpleJekyllSearch({
     searchInput: document.getElementById('search-input'),
