Add new card and restyle card template

--- a/_posts/2020-09-18-ribbon_coco_drak.html
+++ b/_posts/2020-09-18-ribbon_coco_drak.html
@@ -4,7 +4,7 @@ permalink: /ribbon_coco_drak/
 title: "Ribbon Coco Drak"
 tags: dragon ribbon
 categories: spirit synthetic energized invertebrate  horror angelic
-img_name: sunflower_center.png
+img_name: sunflower_center.webp
 img_alt: "Glorious dragon spirit wraped in ribbons"
 scarcity: Unparalleled
 description: "Coco spirits take the form of man in selfish death,
