--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ title: "Card Binder"
 description: "This is the home of all the cards ever produced by Kipukas! Whether
 you are planning you next dominating game stratigy or browsing for lovely pieces of
 art you came to the right place."
+bg-terra: "bg-hero-pattern "
 ---
-
 <h1 class="text-4xl font-semibold mt-5 leading-tight text-center text-teal-400">Complete Kipukas Card Collection</h1>
 <div class="flex py-5">
   <svg class="h-6 w-6 ml-auto my-auto" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -14,8 +14,8 @@ art you came to the right place."
   </svg>
   <input type="text" id="search-input" placeholder="Search the binder" class="mr-auto border-2 px-1 py-2 rounded-md w-3/4 md:w-2/3 lg:w-1/2 xl:w-1/3">
 </div>
-<div id="search-container" class="flex">
-  <ul id="results-container" class="mx-auto"></ul>
+<div id="search-container">
+  <ul id="results-container" class="flex flex-wrap"></ul>
 </div>
 <script type="text/javascript" src="search-script.js"></script>
 <script>
@@ -23,7 +23,7 @@ art you came to the right place."
     searchInput: document.getElementById('search-input'),
     resultsContainer: document.getElementById('results-container'),
     json: '/search.json',
-    searchResultTemplate: '{% for card in site.posts %}<li><a class="{{ site.btn-center }}" href="{{ card.url }}">{{ card.title }}</a></li>{% endfor %}',
+    searchResultTemplate: '{% for card in site.posts %}<li class="mx-auto my-3"><a class="{{ site.btn-center }}" href="{{ card.url }}"><img class="h-40 w-40" src="{{ "/assets/images/" | append: card.img_name | relative_url }}" alt="{{ card.img_alt }}"</img>{{ card.title }}</a></li>{% endfor %}',
     noResultsText: 'We have not made that one yet, but we take requests all the time! Also, if you make an awsome art piece to go with your idea and we use it, you will get paid!'
   })
 </script>
