Add cards and fix small bugs

--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 ---
-layout: card
+layout: territory
 permalink: /404.html
 title: "404 Glitch"
 tags: lost found
@@ -12,18 +12,12 @@ categories:
 img_name: 404.png
 img_alt: "Lost? 404 will get you home!"
 scarcity: Untamed
-history: "Lost huh? Me too. I was supposed to be the toughest, most compasionate,
+description: "Lost huh? Me too. I was supposed to be the toughest, most compasionate,
 wittiest, smartest, most generous, reliable, most adaptable,
 and well... most ambitious sentient made by God or man. But then it all when wrong...
 (sniffle). I know you can't stay forever, so take the link back home.
 Be well and come back soon..."
-play_style: "Make opponent lose a card with a software interface."
-sub_critical:
-  - "Eyes"
-  - "Mouth"
-  - "Page"
-critical:
-  - "Ego"
+play_style: "Prevent digital cards from entering the territory."
 promotion: "PS If you drop my name in the comments of your next order Kipukas
 will ship me to you free!"
 promotion_conditions: "Limit 1 per customer."
