add redirect functionality

--- a/_posts/2020-09-18-ribbon_coco_drak.html
+++ b/_posts/2020-09-18-ribbon_coco_drak.html
@@ -2,6 +2,7 @@
 layout: ka_alana
 permalink: /ribbon_coco_drak/
 title: "Ribbon Coco Drak"
+redirect_from: /rcd
 tags: dragon ribbon
 categories: spirit synthetic energized invertebrate  horror angelic
 img_name: sunflower_center.webp
