make pages short url ready

--- a/_posts/2020-09-18-ribbon_coco_drak.html
+++ b/_posts/2020-09-18-ribbon_coco_drak.html
@@ -1,8 +1,8 @@
 ---
 layout: ka_alana
-permalink: /ribbon_coco_drak/
+permalink: /ribbon-coco-drak/
 title: "Ribbon Coco Drak"
-redirect_from: /rcd
+redirect_from: /GMYN
 tags: dragon ribbon
 categories: spirit synthetic energized invertebrate  horror angelic
 img_name: sunflower_center.webp
