--- a/_posts/2020-09-25-cursed_feather.html
+++ b/_posts/2020-09-25-cursed_feather.html
@@ -1,7 +1,8 @@
 ---
 layout: item
-permalink: /cursed_feather/
+permalink: /cursed-feather/
 title: "Cursed Feather"
+redirect_from: /Re5C
 tags: feather spirit
 categories: item spirit synthetic
 img_name: cursed_feather.webp
