--- a/_posts/2020-09-27-bear_trap.html
+++ b/_posts/2020-09-27-bear_trap.html
@@ -1,7 +1,8 @@
 ---
 layout: trap
-permalink: /bear_trap/
+permalink: /bear-trap/
 title: "Bear Trap"
+redirect_from: /Hwq9
 tags: metal ground
 categories: trap
 img_name: bear_trap.webp
