--- a/_posts/2020-09-27-meteor_shower.html
+++ b/_posts/2020-09-27-meteor_shower.html
@@ -1,7 +1,8 @@
 ---
 layout: territory
-permalink: /meteor_shower/
+permalink: /meteor-shower/
 title: "Meteor Shower"
+redirect_from: /ozsg
 tags: weather
 categories: territory
 img_name: meteor_shower.webp
