--- a/_posts/2020-09-27-sboi.html
+++ b/_posts/2020-09-27-sboi.html
@@ -2,6 +2,7 @@
 layout: ka_alana
 permalink: /sboi/
 title: "Sboi"
+redirect_from: /WJ0w
 tags:
 categories: algorithm synthetic endoskeleton glitch astral
 img_name: sunflower_center.webp
