--- a/_posts/2020-09-30-glitch_doctor.html
+++ b/_posts/2020-09-30-glitch_doctor.html
@@ -1,7 +1,8 @@
 ---
 layout: ka_alana
-permalink: /glitch_doctor/
+permalink: /glitch-doctor/
 title: "Glitch Doctor"
+redirect_from: /jzpY
 categories: person bio energized endoskeleton glitch horror
 img_name: sunflower_center.webp
 img_alt: "crazy electrified doc"
