Add brawl mechanic

--- a/_posts/2020-09-18-ribbon_coco_drak.html
+++ b/_posts/2020-09-18-ribbon_coco_drak.html
@@ -2,7 +2,7 @@
 layout: ka_alana
 permalink: /ribbon-coco-drak/
 title: "Ribbon Coco Drak"
-redirect_from: /GMYN
+redirect_from: /zVBp
 tags: dragon ribbon
 categories: spirit synthetic energized invertebrate  horror angelic
 img_name: sunflower_center.webp
@@ -12,6 +12,7 @@ description: "Coco spirits take the form of man in selfish death,
 beast in wrongful death, or a most powerful dragon in a sacrificing death.
 This spirit has clocked itself with ribbons for an attachment to the physical world."
 play_style: "Requires taming."
+brawl_power: 12593839
 sub_critical:
   - "Ribbon Lesser"
   - "Ribbon Greater"
