--- a/_posts/2020-09-25-cursed_feather.html
+++ b/_posts/2020-09-25-cursed_feather.html
@@ -2,7 +2,7 @@
 layout: item
 permalink: /cursed-feather/
 title: "Cursed Feather"
-redirect_from: /Re5C
+redirect_from: /iXKr
 tags: feather spirit
 categories: item spirit synthetic
 img_name: cursed_feather.webp
