--- a/_posts/2020-09-27-bear_trap.html
+++ b/_posts/2020-09-27-bear_trap.html
@@ -2,7 +2,7 @@
 layout: trap
 permalink: /bear-trap/
 title: "Bear Trap"
-redirect_from: /Hwq9
+redirect_from: /IBFD
 tags: metal ground
 categories: trap
 img_name: bear_trap.webp
