--- a/_posts/2020-09-27-lamp.html
+++ b/_posts/2020-09-27-lamp.html
@@ -2,7 +2,7 @@
 layout: item
 permalink: /lamp/
 title: "Lamp"
-redirect_from: /x67u
+redirect_from: /VnvR
 tags: metal spirit
 categories: item
 img_name: lamp.webp
