--- a/_posts/2020-09-27-stabilizer.html
+++ b/_posts/2020-09-27-stabilizer.html
@@ -2,7 +2,7 @@
 layout: item
 permalink: /stabilizer/
 title: "Stabilizer"
-redirect_from: /w4YD
+redirect_from: /fW7W
 tags: electronic
 categories: item glitch electronic synthetic
 img_name: nvme.webp
