--- a/_posts/2020-09-30-glitch_doctor.html
+++ b/_posts/2020-09-30-glitch_doctor.html
@@ -2,11 +2,12 @@
 layout: ka_alana
 permalink: /glitch-doctor/
 title: "Glitch Doctor"
-redirect_from: /jzpY
+redirect_from: /j1c6
 categories: person bio energized endoskeleton glitch horror
 img_name: sunflower_center.webp
 img_alt: "crazy electrified doc"
 scarcity: special
 description: "After a horrable war this good doctor was turned to madness and joined the ranks of the glitch. Now he resurrects their dead."
 play_style: "Dig throught the discard pile and play a single Ka' alana."
+brawl_power: 8793860
 ---
