--- a/_posts/2020-09-27-sboi.html
+++ b/_posts/2020-09-27-sboi.html
@@ -2,7 +2,7 @@
 layout: ka_alana
 permalink: /sboi/
 title: "Sboi"
-redirect_from: /WJ0w
+redirect_from: /sinU
 tags:
 categories: algorithm synthetic endoskeleton glitch astral
 img_name: sunflower_center.webp
@@ -10,4 +10,5 @@ img_alt: "digital dragon with a few spaztic issues"
 scarcity: very rare
 description: "Born from a russian deep learning algorithm that became trapped in its targets nerual network, Sboi are not to be triffled with."
 play_style: "Must be activated. Can activate 1 other algorithm."
+brawl_power: 10928245
 ---
