Change to brawl sequence

--- a/_posts/2020-09-27-meteor_shower.html
+++ b/_posts/2020-09-27-meteor_shower.html
@@ -2,7 +2,7 @@
 layout: territory
 permalink: /meteor-shower/
 title: "Meteor Shower"
-redirect_from: /CFKF
+redirect_from: /zVBp
 tags: weather
 categories: territory
 img_name: meteor_shower.webp
