--- a/_posts/2020-09-30-glitch_doctor.html
+++ b/_posts/2020-09-30-glitch_doctor.html
@@ -9,5 +9,5 @@ img_alt: "crazy electrified doc"
 scarcity: special
 description: "After a horrable war this good doctor was turned to madness and joined the ranks of the glitch. Now he resurrects their dead."
 play_style: "Dig throught the discard pile and play a single Ka' alana."
-brawl_power: 8793860
+brawl_sequence: j1c6
 ---
