--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@ bg-terra: "bg-hero-pattern "
 ---
 <h1 class="text-4xl font-semibold mt-5 leading-tight text-center text-teal-400">Complete Kipukas Card Collection</h1>
 <div class="flex py-5">
-  <svg class="h-6 w-6 ml-auto my-auto" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <path d="M21 21L15 15M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10Z" stroke="#4A5568" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-  </svg>
+  <a href="./search" class="ml-auto my-auto">
+    <svg class="h-6 w-6" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M21 21L15 15M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10Z" stroke="#4A5568" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+  </a>
   <a href="./search.html" class="bg-white mr-auto border-2 px-1 py-2 rounded-md w-3/4 md:w-2/3 lg:w-1/2 xl:w-1/3"><span class="text-gray-500">Search the binder</span></a>
 </div>
 <div>
