--- a/search.html
+++ b/search.html
@@ -6,6 +6,7 @@ description: "This is the home of all the cards ever produced by Kipukas! Whethe
 you are planning you next dominating game stratigy or browsing for lovely pieces of
 art you came to the right place."
 bg-terra: "bg-hero-pattern "
+body-click: "document.location.href = 'index.html';"
 ---
 <h1 class="text-4xl font-semibold mt-5 leading-tight text-center text-teal-400">Complete Kipukas Card Collection</h1>
 <div class="flex py-5">
@@ -14,7 +15,7 @@ bg-terra: "bg-hero-pattern "
       <path d="M21 21L15 15M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10Z" stroke="#4A5568" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
     </svg>
   </a>
-  <input type="text" id="search-input" placeholder="Search the binder" class="mr-auto border-2 px-1 py-2 rounded-md w-3/4 md:w-2/3 lg:w-1/2 xl:w-1/3">
+  <input type="text" id="search-input" placeholder="Search the binder"  class="mr-auto border-2 px-1 py-2 rounded-md w-3/4 md:w-2/3 lg:w-1/2 xl:w-1/3">
 </div>
 <div id="search-container">
   <ul id="results-container" class="flex flex-wrap"></ul>
