Add escape functionality to search bar

--- a/search.html
+++ b/search.html
@@ -35,3 +35,8 @@ body-click: "document.location.href = 'index.html';"
   document.getElementById('search-input').focus();
   document.getElementById('search-input').select();
 </script>
+<script type="text/javascript">
+    document.addEventListener('keyup', (e) => {
+    if (e.code === "Escape")        document.location.href = 'index.html';
+  });
+</script>
