--- a/_posts/2020-09-27-meteor_shower.html
+++ b/_posts/2020-09-27-meteor_shower.html
@@ -5,7 +5,7 @@ title: "Meteor Shower"
 redirect_from: /zVBp
 tags: weather
 categories: territory
-img_name: meteor_shower.webp
+img_name: meteor_shower.png
 img_alt: "beautiful colorful meteors shooting across the sky"
 scarcity: common
 description: "You just never know when youll have to take a shower."
