--- a/_posts/2021-10-12-parched_traveler.html
+++ b/_posts/2021-10-12-parched_traveler.html
@@ -9,7 +9,13 @@ img_name: parched_traveler.png
 thumb: parched_traveler_alt.png
 img_alt: "A man died, but like a chicken kept walking their path even after death."
 scarcity: "Founder's Deck"
-description: ""
+description: "After traveling the sand ruins created by weapons of mass destruction,
+researchers theorized that one would surly die if they attempted to cross by foot
+alone. They then developed a huminoid form as close to death as possible. It requires
+almost no water nor food and endures heat increadibly well. While it looks like
+a man, this species is not intellegent nor is it sentiant. It was designed to take
+simple commands well. They are used as a scare tactic in war and a less than reliable
+scout. Despite their looks, they are easy to care for and make great pets for children."
 play_style: "Rolls 2 D6, attacker flips a coin upon winning an attacking roll if
 the result is heads then the parched traveler is defeated, otherwise attack again."
 brawl_sequence: oOnN
