Change naming convention to under represent colons

--- a/_posts/2020-09-27-meteor_shower.html
+++ b/_posts/2020-09-27-meteor_shower.html
@@ -1,6 +1,6 @@
 ---
 layout: territory
-permalink: /meteor-shower/
+permalink: /meteor_shower/
 title: "Meteor Shower"
 redirect_from: /zVBp
 variation: "Terrain Feature"
