--- a/_posts/2021-10-11-liliel_healing_fairy.html
+++ b/_posts/2021-10-11-liliel_healing_fairy.html
@@ -6,7 +6,7 @@ redirect_from: /H8wj
 tags: angelic beautiful healer fairy woman sword
 variation: "Character"
 genetic_disposition: Angelic
-img_name: liliel-healing_fairy.webp
+img_name: liliel_healing_fairy.webp
 img_alt: "blonde light fairy with sword and alluring eyes"
 scarcity: "Founder's Deck"
 description: "Liliel is a product of a cloning experiment of the human sized fairy
