Add motive mechanic to site

--- a/_posts/2021-10-11-branwen_mantillusion_practitioner.html
+++ b/_posts/2021-10-11-branwen_mantillusion_practitioner.html
@@ -6,6 +6,7 @@ redirect_from: /IR2B
 tags: praying_mantis manits illusion mirror
 variation: "Character"
 genetic_disposition: Telekinetic
+motivation: Service
 img_name: branwen_mantillusion_practitioner.webp
 img_alt: "Old man praying manits looking at you unnervingly"
 scarcity: "Founder's Deck"
