--- a/_posts/2021-10-11-hilbert_king_of_avian_frogs.html
+++ b/_posts/2021-10-11-hilbert_king_of_avian_frogs.html
@@ -6,6 +6,7 @@ redirect_from: /HMPU
 tags: frog king staff moon bird wings
 variation: "Character"
 genetic_disposition: Avian
+motivation: Passion
 img_name: hilbert_king_of_avian_frogs.webp
 img_alt: "Majistic looking frog with wings perched on a branch stareing at you intently"
 scarcity: "Founder's Deck"
