--- a/_posts/2021-10-11-mihela_cleanser_of_fields.html
+++ b/_posts/2021-10-11-mihela_cleanser_of_fields.html
@@ -6,6 +6,7 @@ redirect_from: /pVLu
 tags: death grave skull fairy woman dagger
 variation: "Character"
 genetic_disposition: Brutal
+motivation: Satisfaction
 img_name: mihela_cleanser_of_fields.webp
 img_alt: "grave yard fairy looking menacing and oddly attractive to some"
 scarcity: "Founder's Deck"
@@ -13,7 +14,7 @@ description: "Mihela was the first of the fairies to be produced. She despised
 having come from no lineage. As she was studied her hatred of the situation grew,
 she became obsessed with creating or finding a past and grew fascinated with the
 concept of death where the past only concerned the memory of the living.
-After eventually becoming released she began to frequent grabe yards, turning
+After eventually becoming released she began to frequent grave yards, turning
 over every head stone, so to say, to dig up the past of those left in the past.
 She began to encounter people who called her a grave robber. As such, run ins
 with the law became frequent. She used her limited flight capability in the dead
