--- a/_posts/2021-10-12-parched_traveler.html
+++ b/_posts/2021-10-12-parched_traveler.html
@@ -6,6 +6,7 @@ redirect_from: /oOnN
 tags: skeleton traveler desert tatoo sun
 variation: "Species"
 genetic_disposition: Decript
+motivation: Conscience
 img_name: parched_traveler.webp
 img_alt: "A man died, but like a chicken kept walking their path even after death."
 scarcity: "Founder's Deck"
