--- a/_posts/2021-10-19-allele_sect_explorer.html
+++ b/_posts/2021-10-19-allele_sect_explorer.html
@@ -6,6 +6,7 @@ redirect_from: /RrDC
 tags: skeleton traveler desert tatoo sun
 variation: "Species"
 genetic_disposition: Magic
+motivation: Spirit
 img_name: allele_sect_explorer.webp
 img_alt: "A man with a long thin beard and blank eyes stares past your soul."
 scarcity: "Founder's Deck"
