--- a/_posts/2022-06-07-plane_table_joker.html
+++ b/_posts/2022-06-07-plane_table_joker.html
@@ -6,6 +6,7 @@ redirect_from: /hLwQ
 tags: clown cards joker imp evil
 variation: "Species"
 genetic_disposition: Cenozoic
+motivation: Satisfaction
 img_name: plane_table_joker.webp
 img_alt: "Scary joker sticks his tongue out at your face"
 scarcity: "Founder's Deck"
