--- a/_posts/2022-06-07-artificer_of_the_salt_chancel.html
+++ b/_posts/2022-06-07-artificer_of_the_salt_chancel.html
@@ -6,6 +6,7 @@ redirect_from: /FuOw
 tags: wizard sea ocean temple sails spirit portal
 variation: "Species"
 genetic_disposition: Entropic
+motivation: Sacrifice
 img_name: artificer_of_the_salt_chancel.webp
 img_alt: "Four armed sea dog magistically floating above water"
 scarcity: "Founder's Deck"
