quick card patch

--- a/_posts/2021-10-12-parched_traveler.html
+++ b/_posts/2021-10-12-parched_traveler.html
@@ -18,8 +18,8 @@ a man, this species is not intelligent nor is it sentient. In fact, it can't eve
 It was designed to take simple commands well. They are used as a scare tactic in
 war and a less than reliable scout. Despite their looks, they are easy to care
 for and make great pets for children."
-play_style: "Rolls 2 D6, attacker flips a coin upon winning an attacking roll if
-the result is heads then the parched traveler is defeated, otherwise attack again."
+play_style: "Rolls 2 D6, can move when downed. If parched traveler is attacked
+with no keal means, flip a coin. If heads the parched traveler is defeated."
 brawl_sequence: oOnN
 critical:
   - "Rotting Head:"
