--- a/_posts/2021-11-19-honey.html
+++ b/_posts/2021-11-19-honey.html
@@ -8,7 +8,8 @@ img_alt: "Inticing pot of honey"
 tags: honey pot bee news
 title: "Honey"
 play_style: "Requires two honey cards to use effect:<br>
-Yum! Recover one keal mean in 4(2) turns"
+Yum! Recover one keal mean in 4 turns if played alone, or 2 turns if played with
+another honey"
 description: "Sticky and rare? Sweet nonetheless."
 scarcity: "Founder's Deck"
 ---
