--- a/_posts/2023-04-03-cartesian_sea.html
+++ b/_posts/2023-04-03-cartesian_sea.html
@@ -7,9 +7,9 @@ img_alt: "This is some pretty fishy math!"
 tags: fish castle plane cartesian x y day night
 variation: "Trap"
 title: "Cartesian Sea"
-play_style: "This trap does not need to be laid before use. Play before the dial
-die roll. For this roll you can turn night to day, or day to night. It cannot
-affect a storm roll."
+play_style: "This trap does not need to be laid before use. Play after the diel
+die roll, but before either player performs actions for their turn. For this
+roll you can turn night to day, or day to night. It cannot affect a storm roll."
 description: "The biggest fish in the sea stretches into the time dimension. It
 often jumps to the next day or night to avoid being around conflict."
 scarcity: "Founder's Deck"
