--- a/_posts/2021-10-11-mihela_cleanser_of_fields.html
+++ b/_posts/2021-10-11-mihela_cleanser_of_fields.html
@@ -24,8 +24,7 @@ assist in managing the battlefield's dead once the fighting passed. The
 more she killed and buried, her obsession grew. She began to wear clothes with
 greater eccentricity that honored the death that surrounded her. Some began to
 call her the mistress of death."
-play_style: "Wastes souls when she engages them if they only have 1 keal mean.
-She cannot attack any other way. Rolls 2 D6 in defense."
+play_style: "Wastes souls when she engages them if they are downed. Rolls 2 D6 in defense."
 brawl_sequence: "pVLu"
 critical:
   - "Thwarting Dagger:"
