--- a/_posts/2021-10-11-shards_desert.html
+++ b/_posts/2021-10-11-shards_desert.html
@@ -8,7 +8,7 @@ tags: desert float stones arch
 variation: "Terrain Feature"
 title: "Shard's desert"
 play_style: "The heavy atmosphere applies a crushing effect to all souls
-that enter the territory space. Cost: 1 injury per turn. Territory holder is able to
+that enter the territory space. Cost: 1 keal means damage per turn. Territory holder is able to
 hide objects that can never be found by the opposing player as long as this card is still in play. Souls can retrieve
 the hidden objects by being in the same territory as this card. Should this card
 be removed from the space, those objects become normally hidden."
