Add better styling for lg screens

--- a/_posts/2021-10-11-avian_keepers_den.html
+++ b/_posts/2021-10-11-avian_keepers_den.html
@@ -23,4 +23,5 @@ bring their beasts in and travel out on their backs for hours. They wonder just 
 built this and what greater purpose it serves."
 
 scarcity: "Founder's Deck"
+landscape: true
 ---
