--- a/_posts/2021-10-11-palace_of_the_allel_sect.html
+++ b/_posts/2021-10-11-palace_of_the_allel_sect.html
@@ -14,4 +14,5 @@ description: "Coming upon a familiar place of rest, the explorer gave a sigh of
 relief. Their travels had been long and the terrains had been treacherous. Their
 mission was not complete, but at least they could find the energy to continue."
 scarcity: "Founder's Deck"
+landscape: true
 ---
