--- a/_posts/2021-10-11-shards_desert.html
+++ b/_posts/2021-10-11-shards_desert.html
@@ -18,4 +18,5 @@ pressure test bed. Most who go to see the progress of the wilds do not return.
 This is especially true for the equatorial band, where the sun blazes long, and
 plants refuse to grow."
 scarcity: "Founder's Deck"
+landscape: true
 ---
