--- a/_posts/2021-10-19-passage_among_maples.html
+++ b/_posts/2021-10-19-passage_among_maples.html
@@ -8,7 +8,7 @@ tags: boat lake swamp marsh trees maples arch
 variation: "Terrain Feature"
 title: "Passage Among Maples"
 play_style: "Extends the movement range of souls that start in this territory by 1.
-During the night, while you control the territory this card is afixed to, 
+During the night, while you control the territory this card is afixed to,
 instead of your normal hand refresh, you may add one honey card to your hand
 from either players discard or your deck.
 Reshuffle your deck if you take this action."
@@ -20,4 +20,5 @@ occurence for the souls in this area, as they do so while taking stock to a larg
 port down river. The arch was built up many years ago and is considered a reminder
 that they live among the home of their ancestors."
 scarcity: "Founder's Deck"
+landscape: true
 ---
