--- a/_posts/2023-03-13-cloth.html
+++ b/_posts/2023-03-13-cloth.html
@@ -10,4 +10,5 @@ title: "Cloth"
 play_style: "Add 1 to escape roll"
 description: "A 'Disguise': offers a 'better' chance to escape"
 scarcity: "Founder's Deck"
+landscape: true
 ---
