--- a/_posts/2023-03-13-string.html
+++ b/_posts/2023-03-13-string.html
@@ -13,4 +13,5 @@ soul can't move or attack until a friendly soul moves into the same territory an
 cuts them out."
 description: "Oh, I'm sorry, did I tie you up?"
 scarcity: "Founder's Deck"
+landscape: true
 ---
