--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ search: search_bar_link.html
   {% assign posts = site.posts | sort:"title" %}
   {% for card in posts %}
     <li class="mx-auto my-3">
-      <a class="{{ site.data.templates.btn-center }} h-64" href="{{card.url}}"><img class="h-40 w-40" src="/assets/thumbnails/{{card.img_name}}" alt="{{card.img_alt}}"></img>{{card.title}}</a>
+      <a class="{{ site.data.templates.btn-center }} h-64" href="{{card.url}}"><img class="h-40 w-40" src="/assets/thumbnails/{{card.img_name}}" alt="{{card.img_alt}}" loading="lazy"></img>{{card.title}}</a>
     </li>
   {% endfor %}
 </ul>
