Post new cards and PWA work

--- a/_posts/2021-10-10-oshliath_and_osileth.html
+++ b/_posts/2021-10-10-oshliath_and_osileth.html
@@ -3,7 +3,7 @@ layout: char_spcs
 permalink: /oshliath_and_osileth/
 title: "Oshliath and Osileth"
 redirect_from: /KVph
-tags: dragon pair blue night
+tags: dragon pair family child mom night
 variation: "Character"
 genetic_disposition: Astral
 motivation: Survival
