--- a/_posts/2021-11-19-sboi_threat_plus_plus.html
+++ b/_posts/2021-11-19-sboi_threat_plus_plus.html
@@ -5,7 +5,7 @@ title: "Sboi: Threat++"
 redirect_from: /J7a0
 tags: dragon city fire tech smoke tower electric digital
 variation: "Species"
-genetic_disposition: Energetics
+genetic_disposition: Energetic
 motivation: Possessor
 img_name: sboi_threat_plus_plus.webp
 img_alt: "Awsome destruction!!!"
